--- a/app/views/aplicacions/show.html.erb
+++ b/app/views/aplicacions/show.html.erb
@@ -10,5 +10,5 @@
   <%= @aplicacion.descripcion %>
 </p>
 
-<%= link_to 'Edit', edit_aplicacion_path(@aplicacion) %> |
-<%= link_to 'Back', aplicacions_path %>
+<%= link_to 'Editar', edit_aplicacion_path(@aplicacion) %> |
+<%= link_to 'Volver', aplicacions_path %>
