--- a/app/views/accommodation_types/edit.html.erb
+++ b/app/views/accommodation_types/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Accommodation Type</h1>
+<h1><u>Editar tipos de hospedajes</h1> </u>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @accommodation_type %> |
-<%= link_to 'Back', accommodation_types_path %>
+
+<%= link_to 'Volver', accommodation_types_path, class: "btn btn-warning" %>
