--- a/app/views/accommodation_types/index.html.erb
+++ b/app/views/accommodation_types/index.html.erb
@@ -1,12 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Accommodation Types</h1>
+<h1><U>Listando tipos de hospedaje</h1></U>
 
-<table>
+<table class='table table-hover'>
   <thead>
     <tr>
       <th>Descripcion</th>
-      <th colspan="3"></th>
+      <th>Estado</th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
@@ -14,9 +15,9 @@
     <% @accommodation_types.each do |accommodation_type| %>
       <tr>
         <td><%= accommodation_type.descripcion %></td>
-        <td><%= link_to 'Show', accommodation_type %></td>
-        <td><%= link_to 'Edit', edit_accommodation_type_path(accommodation_type) %></td>
-        <td><%= link_to 'Destroy', accommodation_type, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= accommodation_type.estado == nil ? "Vacio" : (accommodation_type.estado == true ? 'Activo' : 'Inactivo') %></td>
+        <td><%= link_to 'Editar ', edit_accommodation_type_path(accommodation_type), :method => :get, :class => "btn btn-warning" %></td> 
+       <td><%= link_to 'Eliminar', accommodation_type, class: "btn btn-warning" , method: :delete, data: { confirm: 'Estas seguro que desea eliminar?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +25,8 @@
 
 <br>
 
-<%= link_to 'New Accommodation type', new_accommodation_type_path %>
+<%= link_to 'Agregar nuevo tipo de hospedaje', new_accommodation_type_path %>
+
+
+
+
