--- a/app/views/accommodation_types/new.html.erb
+++ b/app/views/accommodation_types/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Accommodation Type</h1>
+<h1><u>Agregar un nuevo hospedaje</u></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', accommodation_types_path %>
+<%= link_to 'Volver', accommodation_types_path, class: "btn btn-warning" %>
